--- a/homework8/deploy.yaml
+++ b/homework8/deploy.yaml
@@ -45,4 +45,11 @@ spec:
             requests:
               cpu: 250m
               memory: 256Mi
+          volumeMounts:
+            - mountPath: /opt/appl/conf
+              name: httpServer-cmv
+      volumes:
+        - name: httpServer-cmv
+          configMap:
+            name: httpServer-cm
       terminationGracePeriodSeconds: 30
