--- a/homework12/istio-spec.yaml
+++ b/homework12/istio-spec.yaml
@@ -15,6 +15,14 @@ spec:
             host: httpserver.securesvc.svc.cluster.local
             port:
               number: 80
+      fault:
+        abort:
+          httpStatus: 500
+          percentage:
+            value: 50
+        delay:
+          percent: 50
+          fixedDelay: 5s
 ---
 apiVersion: networking.istio.io/v1beta1
 kind: Gateway
